fix steam solid boiler not accepting items (#1680)